--- a/resources/assets/sass/_lightVariables.scss
+++ b/resources/assets/sass/_lightVariables.scss
@@ -3,8 +3,8 @@ $body-bg: #FFF;
 $background-color: #FFF;
 
 // Borders
-//$laravel-border-color: #000;
-$laravel-border-color: $background-color;
+$laravel-border-color: #000;
+$pannel-border-color: $background-color;
 $list-group-border: $laravel-border-color;
 $navbar-default-border: $laravel-border-color;
 $panel-default-border: $laravel-border-color;
